@startuml

title __EDGEVALIDATOR's Class Diagram__\n

  namespace  {
    namespace om.hgok.webapp {
      namespace edgeValidator {
        class com.hgok.webapp.edgeValidator.LinkIterator {
            - currentPointer : int
            - list : List<T>
            - size : int
            - stepSize : int
            + LinkIterator()
            + current()
            + getCurrentPointer()
            + getList()
            + getSize()
            + getStepSize()
            + hasNext()
            + hasPrevious()
            + next()
            + previous()
            + setCurrentPointer()
            + setStepSize()
        }
      }
    }
  }
  

  namespace  {
    namespace om.hgok.webapp {
      namespace edgeValidator {
        class com.hgok.webapp.edgeValidator.LinkValidatorController {
            ~ analysisId : Long
            ~ linkIterator : LinkIterator<Link>
            + end()
            + linkStateChooser()
            + showCodeSnippetsToValidate()
            + stepBackwards()
            + stepForward()
            + validateLink()
            - init()
            - init_analysis()
            - init_iterator()
            - init_model()
            - setStepSizeAndPointer()
        }
      }
    }
  }
  

  namespace  {
    namespace om.hgok.webapp {
      namespace edgeValidator {
        class com.hgok.webapp.edgeValidator.SampleSizeCalculator {
            - confidenceLevel : String
            {static} - confidenceZscore : Map<String, Double>
            - marginOfError : double
            - populationProportion : double
            - populationSize : int
            - sampleSize : long
            - stepSize : int
            - zScore : double
            + SampleSizeCalculator()
            + calculate()
            + getConfidenceLevel()
            + getMarginOfError()
            + getPointer()
            + getPopulationProportion()
            + getPopulationSize()
            + getSampleSize()
            + getStepSize()
            + setConfidenceLevel()
            + setMarginOfError()
            + setPopulationProportion()
            + setPopulationSize()
            + setStepSize()
        }
      }
    }
  }
  

  com.hgok.webapp.edgeValidator.LinkIterator .up.|> java.util.Iterator
  com.hgok.webapp.edgeValidator.LinkValidatorController o-- com.hgok.webapp.analysis.Analysis : analysis
  com.hgok.webapp.edgeValidator.LinkValidatorController o-- com.hgok.webapp.analysis.AnalysisService : analysisService
  com.hgok.webapp.edgeValidator.LinkValidatorController o-- com.hgok.webapp.compared.LinkRepository : linkRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
